   * Fixed bug #15768: Avoid parts of the previous game show in the lobby
   * Fixed bug #15727: Allow wml message titles to wrap
     screen
   * Added the total number of villages to the status table lists
   * Added a new attack dialog, available for testing with --new-widgets
   * Patch #1645: Fixed a bug sending keyboard events to deactivated controls
 * WML Engine:
   * Deprecated [set_variable]'s random key, use rand instead
   * Renamed [unit][status] healable to unhealable so it can default to 'no'
   * Added 'side X turn refresh' and 'side X turn Y refresh' events
   * Add ~DARKEN() counterpart to ~BRIGHTEN()
   * Implement min_value for [illuminates]
   * Added lua functions wesnoth.get_side_count() and wesnoth.is_enemy(a,b)
   * Add 'recall_cost' key for [side], to override [game_config]'s default
   * Add [replace_schedule] tag, which replaces the time of day schedule
   * Trying to include a missing macro/file is now a fatal error
   * Extended #ifdef so that it also tests for files and directories
   * Add [music_volume] tag, which permits modifications to music volume during scenario
   * Added ON_DIFFICULTY, a macro that makes using different values based on difficulty simpler
 * Miscellaneous and bug fixes:
   * Defaulted log level to warning again
   * New option to auto-set delay shroud update on game start
   * better fix for bug 14765 now that string freeze is off
   * Added a way to rename local players at game creation
   * Fixed picking the proper locale, the problem only occurred on some
     systems
   * Added a way to compile wesnoth on windows by using CMake + MSVC9.
   * Added more command line arguments for starting a campaign+scenario
   * Fixed the ping timeout not waiting for the default ping interval when
     ping timeout is not set to 0
   * Fixed a bug in scoring of AI recall list. Patch by billynux.
   * Strip whitespace characters from .ign patterns (bug #15902)