@@ -30,7 +30,7 @@
 					x = {OFFSET_SIDE_1}
 					y = 0
 					w = "(if(width < {OFFSET_TOTAL}, 0, width - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/{BASE_NAME}-border-top.png"
 				[/image]
 
@@ -44,7 +44,7 @@
 					x = "(width - {OFFSET_SIDE_2})"
 					y = {OFFSET_SIDE_1}
 					h = "(if(height < {OFFSET_TOTAL}, 0, height - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/{BASE_NAME}-border-right.png"
 				[/image]
 
@@ -58,7 +58,7 @@
 					x = {OFFSET_SIDE_1}
 					y = "(height - {OFFSET_SIDE_2})"
 					w = "(if(width < {OFFSET_TOTAL}, 0, width - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/{BASE_NAME}-border-bottom.png"
 				[/image]
 
@@ -72,7 +72,7 @@
 					x = 0
 					y = {OFFSET_SIDE_1}
 					h = "(if(height < {OFFSET_TOTAL}, 0, height - {OFFSET_TOTAL}))"
-					stretch = "true"
+					resize_mode = "stretch"
 					name = "dialogs/{BASE_NAME}-border-left.png"
 				[/image]
 
